--- a/DesignerRHN/DesignerRHN-war/web/emplvigencianormalaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplvigencianormalaboral.xhtml
@@ -22,7 +22,7 @@
                             <p:dataTable id="datosHvEntrevista" var="info" rowKey="#{info.secuencia}"  rowIndexVar="indice" style="width: 830px ;border: 1px;"                           
                                          value="#{controlBetaEmplVigenciaNormaLaboral.listEmplVigenciaNormaLaboralPorEmpleado}" scrollable="true" scrollHeight="#{controlBetaEmplVigenciaNormaLaboral.altoTabla}"  scrollWidth="830"
                                          filteredValue="#{controlBetaEmplVigenciaNormaLaboral.filtrarEmplVigenciaNormaLaboralPorEmplado}" emptyMessage="No se encontrarón resultados para la búsqueda"
-                                         editable="true" editMode="cell" selection="#{controlBetaEmplVigenciaNormaLaboral.vigenciaSeleccionada}" selectionMode="single">
+                                         editable="true" editMode="cell" selection="#{controlBetaEmplVigenciaNormaLaboral.vigenciaSeleccionada}" selectionMode="single" >
                                 <p:ajax event="filter" listener="#{controlBetaEmplVigenciaNormaLaboral.eventoFiltrar()}"/>
 
                                 <p:column headerText="Fecha" sortBy="#{info.fechavigencia}" filterBy="#{info.fechavigencia}" filterMatchMode="contains" 
@@ -248,7 +248,7 @@
                         </p:inputTextarea>
                     </p:dialog>
 
-                    <p:dialog id="editPuntaje" header="Editar Norma Laboral" widgetVar="editPuntaje" resizable="false" draggable="false" modal="true" height="55" width="240" style="text-transform: uppercase">  
+                    <p:dialog id="editPuntaje" header="Norma Laboral" widgetVar="editPuntaje" resizable="false" draggable="false" modal="true" height="55" width="240" style="text-transform: uppercase">  
                         <p:inputTextarea value="#{controlBetaEmplVigenciaNormaLaboral.editarEmplVigenciaNormaLaboral.normalaboral.nombre}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
                     </p:dialog>
 
@@ -300,13 +300,8 @@
 
                             <strong><h:outputText value="Norma laboral: " style=" position: absolute; top: 85px" /></strong>
                             <p:inputText id="duplicarTipoCentroCostos" value="#{controlBetaEmplVigenciaNormaLaboral.duplicarEmplVigenciaNormaLaboral.normalaboral.nombre}" style=" width: 127px; position: absolute; left: 135px; top: 80px; text-transform: uppercase" onclick="select();">
-<<<<<<< HEAD
-                                <p:ajax event="click" listener="#{controlBetaEmplVigenciaNormaLaboral.valoresBackupAutocompletar(1)}" />
-                                <p:ajax event="change" listener="#{controlBetaEmplVigenciaNormaLaboral.autocompletarDuplicado('NORMASLABORALES',controlBetaEmplVigenciaNormaLaboral.duplicarEmplVigenciaNormaLaboral.normalaboral.nombre, 1)}" />
-=======
                                 <p:ajax event="click" listener="#{controlBetaEmplVigenciaNormaLaboral.valoresBackupAutocompletar(2)}" />
                                 <p:ajax event="change" listener="#{controlBetaEmplVigenciaNormaLaboral.autocompletarDuplicado('NORMASLABORALES',controlBetaEmplVigenciaNormaLaboral.duplicarEmplVigenciaNormaLaboral.normalaboral.nombre, 2)}" />
->>>>>>> origin/master
                                 <p:ajax event="dblclick" listener="#{controlBetaEmplVigenciaNormaLaboral.asignarVariableNormasLaborales(1)}" />
                             </p:inputText>
                             <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 270px; top: 80px;  " id="btnduplicarNombreSucursal" icon="ui-icon-search" process="@this"  actionListener="#{controlBetaEmplVigenciaNormaLaboral.asignarVariableNormasLaborales(1)}"/>   
