--- a/DesignerRHN/DesignerRHN-war/web/menucapacitacion.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/menucapacitacion.xhtml
@@ -11,12 +11,12 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Menú Capacitación" style=" font-size: 12px; position: absolute; width: 335px; height: 185px; left: 300px; top: 100px;text-align: left" >  
-                        <fieldset style="position: absolute; left: 10px; top: 35px; font-size: 10px; width: 300px; height: 100px; border-radius: 10px; ">
+                    <p:panel  id="PanelTotal" header="Menú Capacitación" style="  position: absolute; width: 335px; height: 185px; left: 300px; top: 100px;text-align: left" >  
+                        <fieldset style="position: absolute; left: 10px; top: 35px; width: 300px; height: 100px; border-radius: 10px; ">
                             <legend style="font-size: 14px; color: blue"><strong>Opciones</strong></legend>
 
-                            <p:commandButton style="font-size: 12px; border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 20px;left: 8px" value="[Factores de Riesgo...]"></p:commandButton>
-                            <p:commandButton style="font-size: 12px;border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 60px;left: 8px" value="[Panorama...]"></p:commandButton>
+                            <p:commandButton style=" border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 20px;left: 8px" value="[Factores de Riesgo...]"></p:commandButton>
+                            <p:commandButton style="border-color:#045491; width:300px; border-width: 2px; position: absolute;top: 60px;left: 8px" value="[Panorama...]"></p:commandButton>
 
 
                         </fieldset>
