--- a/DesignerRHN/DesignerRHN-war/web/sucursal.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/sucursal.xhtml
@@ -318,90 +318,90 @@
 
 
 
-                    <p:dialog id="nuevoRegistroSucursales" header="#{msg['tituloN']}" widgetVar="nuevoRegistroSucursales" closable="false" resizable="false"  draggable="false" modal="true" height="400" width="340" style=" padding: 0px">  
+                    <p:dialog id="nuevoRegistroSucursales" header="#{msg['tituloN']}" widgetVar="nuevoRegistroSucursales" closable="false" resizable="false"  draggable="false" modal="true" height="230" width="310" style=" padding: 0px">  
                         <center><strong><h:outputText id="informacion" value="#{msg['tituloNN']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="nuevaTipoempresa" style="border: none;">
 
-                            <strong><h:outputText value="#{msg['codigoN']}"  style=" position: absolute; top: 90px;text-transform: uppercase" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlSucursales.nuevoSucursales.codigo}" style=" width: 135px; position: absolute; left: 180px; top: 85px;">
+                            <strong><h:outputText value="#{msg['codigoN']}"  style=" position: absolute; top: 60px;text-transform: uppercase" /></strong>
+                            <p:inputText id="nuevoCodigo" value="#{controlSucursales.nuevoSucursales.codigo}" style=" width: 135px; position: absolute; left: 120px; top: 55px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="#{msg['codigoNN']}" />
 
-                            <strong><h:outputText value="#{msg['nombreN']} "  style=" position: absolute; top: 140px;text-transform: uppercase" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlSucursales.nuevoSucursales.nombre}" style=" width: 135px; position: absolute; left: 180px; top: 135px;text-transform: uppercase">
+                            <strong><h:outputText value="#{msg['nombreN']} "  style=" position: absolute; top: 90px;text-transform: uppercase" /></strong>
+                            <p:inputText  id="nuevoNombre" value="#{controlSucursales.nuevoSucursales.nombre}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
 
-                            <strong><h:outputText value="#{msg['bancoN']} "  style=" position: absolute; top: 190px;text-transform: uppercase" /></strong>
-                            <p:inputText  id="nuevoPersona" value="#{controlSucursales.nuevoSucursales.banco.nombre}" style=" width: 135px; position: absolute; left: 180px; top: 185px;text-transform: uppercase">
+                            <strong><h:outputText value="#{msg['bancoN']} "  style=" position: absolute; top: 120px" /></strong>
+                            <p:inputText  id="nuevoPersona" value="#{controlSucursales.nuevoSucursales.banco.nombre}" style=" width: 135px; position: absolute; left: 120px; top: 115px;text-transform: uppercase">
                                 <p:ajax event="click" listener="#{controlSucursales.valoresBackupAutocompletar(1,'PERSONA')}" />
                                 <p:ajax event="change" listener="#{controlSucursales.autocompletarNuevo('PERSONA',controlSucursales.nuevoSucursales.banco.nombre, 1)}" />
                                 <p:ajax event="dblclick" listener="#{controlSucursales.asignarVariableBancos(0)}" />
                             </p:inputText>
-                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 310px; top: 185px;  " id="btnnuevoPersonaFirma" icon="ui-icon-search" process="@this"  actionListener="#{controlSucursales.asignarVariableBancos(0)}"/>   
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 265px; top: 115px;  " id="btnnuevoPersonaFirma" icon="ui-icon-search" process="@this"  actionListener="#{controlSucursales.asignarVariableBancos(0)}"/>   
                             <p:watermark for="nuevoPersona" value="#{msg['bancoNN']}" />
 
-                            <strong><h:outputText value="#{msg['ciudadN']}"  style=" position: absolute; top: 240px;text-transform: uppercase" /></strong>
-                            <p:inputText  id="nuevoCargo" value="#{controlSucursales.nuevoSucursales.ciudad.nombre}" style=" width: 135px; position: absolute; left: 180px; top: 235px;text-transform: uppercase">
+                            <strong><h:outputText value="#{msg['ciudadN']}"  style=" position: absolute; top: 150px" /></strong>
+                            <p:inputText  id="nuevoCargo" value="#{controlSucursales.nuevoSucursales.ciudad.nombre}" style=" width: 135px; position: absolute; left: 120px; top: 145px;text-transform: uppercase">
                                 <p:ajax event="click" listener="#{controlSucursales.valoresBackupAutocompletar(1,'CARGO')}" />
                                 <p:ajax event="change" listener="#{controlSucursales.autocompletarNuevo('CARGO',controlSucursales.nuevoSucursales.ciudad.nombre, 1)}" />
                                 <p:ajax event="dblclick" listener="#{controlSucursales.asignarVariableCiudades(0)}" />
                             </p:inputText>
-                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 310px; top: 235px;  " id="btnnuevoCargo" icon="ui-icon-search" process="@this"  actionListener="#{controlSucursales.asignarVariableCiudades(0)}"/>   
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 265px; top: 145px;  " id="btnnuevoCargo" icon="ui-icon-search" process="@this"  actionListener="#{controlSucursales.asignarVariableCiudades(0)}"/>   
                             <p:watermark for="nuevoCargo" value="#{msg['ciudadNN']}" />
 
 
 
 
-                            <p:commandButton id="limpiar" value="#{msg['limpiar']}" style=" position: absolute; left: 20px; top: 365px;"  actionListener="#{controlSucursales.limpiarNuevoSucursales()}" update="nuevaTipoempresa" process="@this"/>
-                            <p:commandButton id="agregarTE" value="#{msg['agregar']}" style=" position: absolute; left: 190px; top: 365px;" actionListener="#{controlSucursales.agregarNuevoSucursales()}" process="@this" />
-                            <p:commandButton id="cancelarTE" value="#{msg['cancelar']}" style=" position: absolute; left: 260px; top: 365px;"  update="nuevaTipoempresa" onclick="nuevoRegistroSucursales.hide();"  actionListener="#{controlSucursales.limpiarNuevoSucursales()}"  process="@this"/>
+                            <p:commandButton id="limpiar" value="#{msg['limpiar']}" style=" position: absolute; left: 10px; top: 190px;"  actionListener="#{controlSucursales.limpiarNuevoSucursales()}" update="nuevaTipoempresa" process="@this" icon="ui-icon-trash"/>
+                            <p:commandButton id="agregarTE" value="#{msg['agregar']}" style=" position: absolute; left: 120px; top: 190px;" actionListener="#{controlSucursales.agregarNuevoSucursales()}" process="@this"  icon="ui-icon-circle-check"/>
+                            <p:commandButton id="cancelarTE" value="#{msg['cancelar']}" style=" position: absolute; left: 210px; top: 190px;"  update="nuevaTipoempresa" onclick="nuevoRegistroSucursales.hide();"  actionListener="#{controlSucursales.limpiarNuevoSucursales()}"  process="@this" icon="ui-icon-circle-close"/>
                         </p:panel>
                     </p:dialog>
 
 
 
-                    <p:dialog id="duplicarRegistroSucursales" header="#{msg['tituloD']}" widgetVar="duplicarRegistroSucursales" closable="false" resizable="false"  draggable="false" modal="true" height="400" width="340" style=" padding: 0px">  
+                    <p:dialog id="duplicarRegistroSucursales" header="#{msg['tituloD']}" widgetVar="duplicarRegistroSucursales" closable="false" resizable="false"  draggable="false" modal="true" height="230" width="310" style=" padding: 0px">  
                         <center><strong><h:outputText id="informacionDuplicar" value="#{msg['tituloDD']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
                         <p:panel id="duplicarTE" style="border: none;">
 
-                            <strong><h:outputText value="#{msg['codigoN']}"  style=" position: absolute; top: 90px;text-transform: uppercase" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlSucursales.duplicarSucursales.codigo}" style=" width: 135px; position: absolute; left: 180px; top: 85px;">
+                            <strong><h:outputText value="#{msg['codigoN']}"  style=" position: absolute; top: 60px;text-transform: uppercase" /></strong>
+                            <p:inputText id="duplicarCodigo" value="#{controlSucursales.duplicarSucursales.codigo}" style=" width: 135px; position: absolute; left: 120px; top: 55px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="#{msg['codigoNN']}" />
 
-                            <strong><h:outputText value="#{msg['nombreN']}"  style=" position: absolute; top: 140px;text-transform: uppercase" /></strong>
-                            <p:inputText  id="duplicarNombre" value="#{controlSucursales.duplicarSucursales.nombre}" style=" width: 135px; position: absolute; left: 180px; top: 135px;text-transform: uppercase">
+                            <strong><h:outputText value="#{msg['nombreN']}"  style=" position: absolute; top: 90px;text-transform: uppercase" /></strong>
+                            <p:inputText  id="duplicarNombre" value="#{controlSucursales.duplicarSucursales.nombre}" style=" width: 135px; position: absolute; left: 120px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="#{msg['nombreNN']}" />
 
-                            <strong><h:outputText value="#{msg['bancoN']}"  style=" position: absolute; top: 190px;text-transform: uppercase" /></strong>
-                            <p:inputText id="duplicarPersona" value="#{controlSucursales.duplicarSucursales.banco.nombre}"  style=" width: 135px; position: absolute; left: 180px; top: 185px;" >
+                            <strong><h:outputText value="#{msg['bancoN']}"  style=" position: absolute; top: 120px;text-transform: uppercase" /></strong>
+                            <p:inputText id="duplicarPersona" value="#{controlSucursales.duplicarSucursales.banco.nombre}"  style=" width: 135px; position: absolute; left: 120px; top: 115px;" >
                                 <p:ajax event="click" listener="#{controlSucursales.valoresBackupAutocompletar(2,'PERSONA')}" />
                                 <p:ajax event="change" listener="#{controlSucursales.autocompletarDuplicado('PERSONA', controlSucursales.duplicarSucursales.banco.nombre , 2)}" />
                                 <p:ajax event="dblclick" listener="#{controlSucursales.asignarVariableBancos(1)}" />
                             </p:inputText>
-                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 310px; top: 185px;  " id="btnduplicarPersona" icon="ui-icon-search" process="@this"  actionListener="#{controlSucursales.asignarVariableBancos(1)}"/>   
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 265px; top: 115px;  " id="btnduplicarPersona" icon="ui-icon-search" process="@this"  actionListener="#{controlSucursales.asignarVariableBancos(1)}"/>   
                             <p:watermark for="duplicarPersona" value="#{msg['bancoNN']}" />
 
-                            <strong><h:outputText value="#{msg['ciudadN']}"  style=" position: absolute; top: 240px;text-transform: uppercase" /></strong>
-                            <p:inputText id="duplicarCargo" value="#{controlSucursales.duplicarSucursales.ciudad.nombre}"  style=" width: 135px; position: absolute; left: 180px; top: 235px;" >
+                            <strong><h:outputText value="#{msg['ciudadN']}"  style=" position: absolute; top: 150px;text-transform: uppercase" /></strong>
+                            <p:inputText id="duplicarCargo" value="#{controlSucursales.duplicarSucursales.ciudad.nombre}"  style=" width: 135px; position: absolute; left: 120px; top: 145px;" >
                                 <p:ajax event="click" listener="#{controlSucursales.valoresBackupAutocompletar(2,'CARGO')}" />
                                 <p:ajax event="change" listener="#{controlSucursales.autocompletarDuplicado('CARGO', controlSucursales.duplicarSucursales.ciudad.nombre , 2)}" />
                                 <p:ajax event="dblclick" listener="#{controlSucursales.asignarVariableCiudades(1)}" />
                             </p:inputText>
-                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 310px; top: 235px;  " id="btnduplicarCargo" icon="ui-icon-search" process="@this"  actionListener="#{controlSucursales.asignarVariableCiudades(1)}"/>   
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 265px; top: 145px;  " id="btnduplicarCargo" icon="ui-icon-search" process="@this"  actionListener="#{controlSucursales.asignarVariableCiudades(1)}"/>   
                             <p:watermark for="duplicarCargo" value="#{msg['ciudadNN']}" />
 
 
-                            <p:commandButton id="limpiarD" value="#{msg['limpiar']}" style=" position: absolute; left: 20px; top: 365px;"  actionListener="#{controlSucursales.limpiarDuplicarSucursales() }" update="duplicarTE"  process="@this"/>
-                            <p:commandButton id="duplicarVFP" value="#{msg['duplicarB']}" style=" position: absolute; left: 190px; top: 365px;" actionListener="#{controlSucursales.confirmarDuplicar()}"  process="@this" />
-                            <p:commandButton id="cancelarDuplicarVFP" value="#{msg['cancelar']}" style=" position: absolute; left: 260px; top: 365px;"  update="duplicarTE" onclick="duplicarRegistroSucursales.hide();" actionListener="#{controlSucursales.limpiarDuplicarSucursales()}"  process="@this"/>
+                            <p:commandButton id="limpiarD" value="#{msg['limpiar']}" icon="ui-icon-trash" style=" position: absolute; left: 20px; top: 190px;"  actionListener="#{controlSucursales.limpiarDuplicarSucursales() }" update="duplicarTE"  process="@this"/>
+                            <p:commandButton id="duplicarVFP" value="#{msg['duplicarB']}"  icon="ui-icon-circle-check" style=" position: absolute; left: 120px; top: 190px;" actionListener="#{controlSucursales.confirmarDuplicar()}"  process="@this" />
+                            <p:commandButton id="cancelarDuplicarVFP" value="#{msg['cancelar']}" icon="ui-icon-circle-close" style=" position: absolute; left: 210px; top: 190px;"  update="duplicarTE" onclick="duplicarRegistroSucursales.hide();" actionListener="#{controlSucursales.limpiarDuplicarSucursales()}"  process="@this"/>
                         </p:panel>
                     </p:dialog>
                 </h:form>
