--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -15,7 +15,7 @@
                             <fieldset  style="  width: 180px;position: absolute; left: 5px;height: 100px;border-radius: 10px">
                                 <legend style="font-size: 10px; color: blue;width: 160px"><strong>Novedades Fijas y Ocasionales</strong></legend>
                                 <h:graphicImage value="CreandoIconosJar/IconNFYO.gif" style="position: absolute; top: 18px; left: 5px; width: 35px  ; height: 50px "/>
-                                <p:commandButton style="position: absolute; left: 45px; width: 150px;top:21px; height: 25px ;font-size: 10px" value="Por Empleado..." actionListener="#{controlNovedad.recibir('por empleado...')}" action="Impresion"/>
+                                <p:commandButton style="position: absolute; left: 45px; width: 150px;top:21px; height: 25px ;font-size: 10px" value="Por Empleado..." actionListener="#{controlNovedad.recibir('por empleado...')}" action="novedadempleado"/>
                                
                                 <p:commandButton style="position: absolute;top: 50px; left: 45px; width: 150px; height: 25px ;font-size: 10px" value="Por Concepto..." actionListener="#{controlNovedad.recibir('por Concepto...')}" action="Impresion" />
                                 <p:commandButton style="position: absolute;top: 79px; left: 45px; width: 150px; height: 25px ;font-size: 10px" value="Por Tercero..." actionListener="#{controlNovedad.recibir('por Tercero...')}" action="Impresion"/>
