--- a/DesignerRHN/DesignerRHN-war/web/Tercero.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Tercero.xhtml
@@ -306,7 +306,7 @@
 
                         <p:commandButton style="position: absolute; left: 700px; top: 513px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="#{msg['aceptar']}" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosTerceros" process="@this" />
                         <p:commandButton style="position: absolute; left: 20px; top: 513px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="#{msg['refrescar']}" icon="ui-icon-refresh" actionListener="#{controlTercero.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 790px; top: 513px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlTercero.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 790px; top: 513px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="#{msg['atras']}" action="#{controlTercero.redirigir()}" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlTercero.salir()}" process="@this" />
                     </p:panel>
 
 
